<resources>
    <string name="app_name">CriminalIntent</string>

    <string name="crime_title_hint">Please type in some info.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_serious_label">Serious?</string>

    <string name="crime_title">Crime Title</string>
    <string name="crime_date">Crime Date</string>
    <string name="crime_time">Crime Date</string>

    <string name="date_picker_title">Date of crime:</string>
    <string name="time_picker_title">Date of crime:</string>

    <!-- added in Chapter 13 Toolbar -->
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">no crime</string>
    <string name="delete_crime">Delete Crime</string>

    <plurals name ="subtitle_plural">
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>

    <string name="no_crime_info">There is no Crime exists</string>

    <!-- Listing 15.1-->
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>

    <!-- Listing 15.7 -->
    <string name="crime_report">%1$s!
    The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">There is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>

    <string name="crime_dial">Dial</string>


    <!-- android:contentDescription -->
    <string name="crime_photo_button_description">Take photo of crime scene</string>
    <string name="crime_photo_no_image_description"> Crime scene photo (not set)</string>
    <string name="crime_photo_image_description">Crime scene photo (set)</string>

    <!-- Challenge: Improving the List, giving giving the handcuff icon a content description. -->
    <string name="crime_list_no_handcuff_icon_description">This crime is not solved</string>
    <string name="crime_list_with_handcuff_icon_description">This crime is solved</string>

    <!--Challenge: Announcing Events -->
    <string name="crime_mPhotoView_announceForAccessibility">You\ve taken a picture</string>
</resources>